# AI-powered-SQL-Assistant

./: LICENSE  README.md  app.py  chain.py  cli.py  connect_database.py  gui.py  main.py  pyproject.toml  requirements.txt
core/: chains.py  prompts.py
database/: connection.py  tools.py
security/: sql_validator.py
