[project]
name = "ai-powered-sql-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
]

[tool.uv]
link-mode = "copy"
