[project]
name = "ai-powered-sql-assistant"
version = "0.1.0"
description = "AI-powered SQL assistant using Gemini and LangChain"
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-google-genai==2.1.10",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.59.1",
]

[tool.uv]
link-mode = "copy"
